--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="container">
 		<!--section home -->
 		<section id="home">
-			<img src="img/gambar1.jpg">
+			<img src="gambar1.jpg">
 			<div class="kolom">
 				<p class="deskripsi">Learning to make a website</p>
 				<h2>Easy, Fast, and Worth it</h2>
@@ -52,7 +52,7 @@
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 				<p><a href="" class="tombol-ungu">Read More</a></p>
 			</div>
-			<img src="img/gambar2.jpg">
+			<img src="gambar2.jpg">
 		</section>
 
 		<!-- section tutors -->
@@ -66,19 +66,19 @@
 				</div>
 				<div class="kolom-tutor">
 					<div class="list-tutor">
-						<img src="img/person1.png">
+						<img src="person1.png">
 						<p>Alexandria</p>
 					</div>
 					<div class="list-tutor">
-						<img src="img/person2.jpg">
+						<img src="person2.jpg">
 						<p>Jhon Doe</p>
 					</div>
 					<div class="list-tutor">
-						<img src="img/person3.jpg">
+						<img src="person3.jpg">
 						<p>Michael Wills</p>
 					</div>
 					<div class="list-tutor">
-						<img src="img/person4.jpg">
+						<img src="person4.jpg">
 						<p>Bruce Dell</p>
 					</div>
 				</div>
@@ -96,19 +96,19 @@
 				</div>
 				<div class="kolom-tutor">
 					<div class="list-tutor">
-						<img src="img/campus1.jpg">
+						<img src="campus1.jpg">
 					</div>
 					<div class="list-tutor">
-						<img src="img/campus2.jpg">
+						<img src="campus2.jpg">
 					</div>
 					<div class="list-tutor">
-						<img src="img/campus3.jpg">
+						<img src="campus3.jpg">
 					</div>
 					<div class="list-tutor">
-						<img src="img/campus4.jpg">
+						<img src="campus4.jpg">
 					</div>
 					<div class="list-tutor">
-						<img src="img/campus5.jpg">
+						<img src="campus5.jpg">
 					</div>
 				</div>
 			</div>
@@ -174,7 +174,7 @@
 
 	<div id="copyright">
 		<div class="container">
-			&copy; 2021. Created by <strong>JasaWeb.id</strong> - All Right Reserved.
+			&copy; 2021. Created by <strong>Alen Saputra</strong> - All Right Reserved.
 		</div>
 	</div>
 
